mileStone 1: feat 2: fixed some logic except Spring Security